test/parse-errors/type-param-cant-have-type-args.nz.ast.tata
file-ast(
	imports: []
	exports: []
	specs: []
	aliases: []
	structs: []
	funs: [
		fun-decl(
			public?: true
			sig: sig-ast(range(0, 16), f, inststruct(range(2, 6), void), [param(range(7, 15), a, type-param(range(9, 15), a))])
			body: pass)])
